# ollamaCode

./: README.md  build-rpm-complete.sh  build-rpm.sh  install.sh  macos-install.sh
Formula/: casper.rb  oleg.rb  ollamacode.rb
cpp/: CMakeLists.txt
cpp/include/: agent.h  cli.h  command_menu.h  config.h  db_client.h  embeddings.h  license.h  mcp_client.h  model_manager.h  ollama_client.h  prompt_db.h  rag_engine.h  search_client.h  session_manager.h  task_suggester.h  tool_executor.h  tool_parser.h  utils.h  vector_db.h
cpp/src/: agent.cpp  cli.cpp  command_menu.cpp  config.cpp  db_client.cpp  embeddings.cpp  license.cpp  main.cpp  mcp_client.cpp  model_manager.cpp  ollama_client.cpp  prompt_db.cpp  rag_engine.cpp  search_client.cpp  session_manager.cpp  task_suggester.cpp  tool_executor.cpp  tool_parser.cpp  utils.cpp  vector_db.cpp
docs/: EXAMPLES.md  FEATURES.md  MCP_SETUP.md  QUICKSTART.md
gui/: README.md  project.yml
gui/Casper.xcodeproj/: project.pbxproj
gui/Casper.xcodeproj/xcshareddata/xcschemes/: Casper.xcscheme
gui/Casper/App/: CasperApp.swift
gui/Casper/Models/: Agent.swift  Session.swift
gui/Casper/Services/: ConfigService.swift  SessionService.swift  ToolExecutorService.swift  ToolParserService.swift
gui/Casper/Views/: AgentSelectorView.swift  ChatView.swift  MainView.swift  SettingsView.swift
gui/OllamaCode.xcodeproj/: project.pbxproj
gui/OllamaCode.xcodeproj/xcshareddata/xcschemes/: OllamaCode.xcscheme
gui/OllamaCode/App/: OllamaCodeApp.swift
gui/OllamaCode/Models/: Message.swift  ToolCall.swift  ToolResult.swift
gui/OllamaCode/Resources/: Info.plist
gui/OllamaCode/Services/: OllamaService.swift
gui/OllamaCode/Utilities/: FileManager+Extensions.swift
gui/OllamaCode/ViewModels/: ChatViewModel.swift
gui/OllamaCode/Views/: ChatView.swift  MainView.swift  MessageView.swift
lib/: system_prompt.sh
